Added download features and some playback features.
